ci/k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: solera-rms-compliance-new-rules-ui
  name: solera-rms-compliance-new-rules-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      service: new-rules-ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/default: "true"
        service: solera-rms-compliance-new-rules-ui
        solera-vertical: rms
        solera-env: dev
        solera-org: cmp
        solera-ingress: enabled
    spec:
      containers:
        - args:
            - ./ci/build.sh
          image: feeds.axadmin.net/docker/rms/nvcmp/new-rules-ui:VERSION
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 60
            periodSeconds: 60
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 180
          name: solera-rms-compliance-new-rules-ui
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 100M
              cpu: 3m
            limits:
              memory: 125M
              cpu: 260m
      restartPolicy: Always
      serviceAccountName: default
status: {}
