ci/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: solera-rms-compliance-rules-newui
  name: solera-rms-compliance-rules-newui
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    service: solera-rms-compliance-rules-newui
  type: ClusterIP
status:
  loadBalancer: {}
