ci/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: solera-rms-compliance-new-rules-ui
  labels:
    service: solera-rms-compliance-new-rules-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/hsts: "true"
    nginx.ingress.kubernetes.io/hsts-preload: "true"
    nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
spec:
  rules:
    - host: new-rules-ui.tkg-rms-dev.usdc01.solera.farm
      http:
        paths:
          - backend:
              service:
                name: solera-rms-compliance-new-rules-ui
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
