ci/k8s/dev/solera-rms-compliance-rules-newui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: solera-rms-compliance-rules-newui
  labels:
    service: solera-rms-compliance-rules-newui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/hsts: "true"
    nginx.ingress.kubernetes.io/hsts-preload: "true"
    nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
spec:
  rules:
    - host: rules-newui.tkg-rms-dev.usdc01.solera.farm
      http:
        paths:
          - backend:
              service:
                name: solera-rms-compliance-rules-newui
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
